// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> it renders correctly with minimal props 1`] = `
<Provider>
  <ForwardRef
    href="/"
  >
    <LinkInner
      component="a"
      elRef={null}
      href="/"
      isStatic={[Function]}
      lang=""
    >
      <a
        href="/"
        lang=""
      >
        A link
      </a>
    </LinkInner>
  </ForwardRef>
</Provider>
`;

exports[`<Link /> when a custom component is used it renders correctly 1`] = `
<Provider
  component={[Function]}
>
  <ForwardRef
    href="/page/"
  >
    <LinkInner
      component={[Function]}
      elRef={null}
      href="/page/"
      isStatic={[Function]}
      lang=""
    >
      <CustomLink
        href="/page/"
        isRelative={true}
        isStatic={false}
        lang=""
      >
        <div
          href="/page/"
          isrelative="true"
          isstatic="false"
          lang=""
        >
          A link
        </div>
      </CustomLink>
    </LinkInner>
  </ForwardRef>
</Provider>
`;

exports[`<Link /> when the context provider has a lang set /en is not prefixed by the language 1`] = `
<Provider
  lang="en"
>
  <ForwardRef
    href="/en"
  >
    <LinkInner
      component="a"
      elRef={null}
      href="/en"
      isStatic={[Function]}
      lang="en"
    >
      <a
        href="/en"
        lang="en"
      >
        A link
      </a>
    </LinkInner>
  </ForwardRef>
</Provider>
`;

exports[`<Link /> when the context provider has a lang set /en/ is not prefixed by the language 1`] = `
<Provider
  lang="en"
>
  <ForwardRef
    href="/en/"
  >
    <LinkInner
      component="a"
      elRef={null}
      href="/en/"
      isStatic={[Function]}
      lang="en"
    >
      <a
        href="/en/"
        lang="en"
      >
        A link
      </a>
    </LinkInner>
  </ForwardRef>
</Provider>
`;

exports[`<Link /> when the context provider has a lang set /enter/ is still prefixed by the language 1`] = `
<Provider
  lang="en"
>
  <ForwardRef
    href="/enter/"
  >
    <LinkInner
      component="a"
      elRef={null}
      href="/enter/"
      isStatic={[Function]}
      lang="en"
    >
      <a
        href="/en/enter/"
        lang="en"
      >
        A link
      </a>
    </LinkInner>
  </ForwardRef>
</Provider>
`;

exports[`<Link /> when the context provider has a lang set absolute URL's are unaffected 1`] = `
<Provider
  lang="en"
>
  <ForwardRef
    href="https://site.com/page/"
  >
    <LinkInner
      component="a"
      elRef={null}
      href="https://site.com/page/"
      isStatic={[Function]}
      lang="en"
    >
      <a
        href="https://site.com/page/"
        lang="en"
      >
        A link
      </a>
    </LinkInner>
  </ForwardRef>
</Provider>
`;

exports[`<Link /> when the context provider has a lang set already language prefixed URL's are unaffected 1`] = `
<Provider
  lang="en"
>
  <ForwardRef
    href="/en/page/"
  >
    <LinkInner
      component="a"
      elRef={null}
      href="/en/page/"
      isStatic={[Function]}
      lang="en"
    >
      <a
        href="/en/page/"
        lang="en"
      >
        A link
      </a>
    </LinkInner>
  </ForwardRef>
</Provider>
`;

exports[`<Link /> when the context provider has a lang set it prefixes the URL with the lang 1`] = `
<Provider
  lang="en"
>
  <ForwardRef
    href="/page/"
  >
    <LinkInner
      component="a"
      elRef={null}
      href="/page/"
      isStatic={[Function]}
      lang="en"
    >
      <a
        href="/en/page/"
        lang="en"
      >
        A link
      </a>
    </LinkInner>
  </ForwardRef>
</Provider>
`;

exports[`<Link /> when the context provider has a lang set when validation for static URL's are in place non-static URL's are prefixed with the language 1`] = `
<Provider
  isStatic={[Function]}
  lang="en"
>
  <ForwardRef
    href="/non-static/page/"
  >
    <LinkInner
      component="a"
      elRef={null}
      href="/non-static/page/"
      isStatic={[Function]}
      lang="en"
    >
      <a
        href="/en/non-static/page/"
        lang="en"
      >
        A link
      </a>
    </LinkInner>
  </ForwardRef>
</Provider>
`;

exports[`<Link /> when the context provider has a lang set when validation for static URL's are in place static URL's are unaffected 1`] = `
<Provider
  isStatic={[Function]}
  lang="en"
>
  <ForwardRef
    href="/images/myimage.jpeg"
  >
    <LinkInner
      component="a"
      elRef={null}
      href="/images/myimage.jpeg"
      isStatic={[Function]}
      lang="en"
    >
      <a
        href="/images/myimage.jpeg"
        lang="en"
      >
        A link
      </a>
    </LinkInner>
  </ForwardRef>
</Provider>
`;

exports[`<Link /> when the provider is not used it renders correctly 1`] = `
<ForwardRef
  href="/"
>
  <LinkInner
    component="a"
    elRef={null}
    href="/"
    isStatic={[Function]}
  >
    <a
      href="/"
    >
      A link
    </a>
  </LinkInner>
</ForwardRef>
`;
